# ullyses

./: CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python_testing.yml
notebooks/: ullyses-coadd.ipynb  ullyses-custom-stis.ipynb  ullyses-env-test.ipynb  ullyses-getrawdata.ipynb  ullyses-timeseries.ipynb  ullyses-walkthrough.ipynb
src/ullyses/: __init__.py  _release.py  apply_cos_shifts.py  calibrate_stis_data.py  check_hlsps.py  coadd.py  combine_header_keys.py  create_ullyses_hlsp.py  ctts_cal.py  flag_vignetting.py  fuse_add_dq.py  generic_coadd_wrapper.py  imaging_hlsps_wrapper.py  lcogt_hlsps_wrapper.py  make_flagged_fuse.py  make_preview_plots.py  make_stis_x1ds.py  plot_stis_data.py  readwrite_yaml.py  splittag_wrapper.py  stisblazefix_wrapper.py  timeseries.py  timeseries_wrapper.py  ullyses_coadd_abut_wrapper.py  ullyses_hlsp.py  wrapper.py
src/ullyses/tests/: test_wrapper.py
tests/: test_wrapper.py
ullyses/: LICENSE  README.md  analyze_variability.py  apply_cos_shifts.py  calibrate_stis_data.py  check_hlsps.py  coadd.py  combine_header_keys.py  create_ullyses_hlsp.py  ctts_cal.py  fuse_add_dq.py  generic_coadd_wrapper.py  make_flagged_fuse.py  make_preview_plots.py  make_stis_x1ds.py  plot_stis_data.py  readwrite_yaml.py  splittag_wrapper.py  stis_coadd_x1d.py  stisblazefix_wrapper.py  timeseries.py  timeseries_wrapper.py  ullyses_coadd_abut_wrapper.py  ullyses_config.py  ullyses_hlsp.py  unflag_echelle_orders.py  wrapper.py
