[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ullyses"
version = "1.0.0+dr2"
description = "Create ULLYSES data products"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "ULLYSES STScI Team", email = "ullyses_dp@stsci.edu" }]
keywords = ["astronomy"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "setuptools",
    "numpy",
    "astropy",
    "pandas",
]
