[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ullyses"
version = "4.1.0" # Set release string in release.py
description = "Create ULLYSES data products"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "ULLYSES STScI Team", email = "ullyses_dp@stsci.edu" }]
keywords = ["astronomy"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "datetime",
    "numpy>=1.22.4",
    "cython",
    "astropy>=6.0.0",
    "ullyses_utils>=3.1.0",
    "pandas>2.0",
    "calcos>=3.4.0",
    "costools",
    "stistools>=1.4.2",
    "matplotlib",
    "pyyaml",
    "plotly",
    "scipy>=1.11.4",
    "hasp>=0.9.6"
]

[project.scripts]
coadd = "ullyses.ullyses_coadd_abut_wrapper:coadd_parser"

